--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>My page</title>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    git
+    <div class="menu">
+        <ul class="navbar">
+            <li>Trang Chủ</li>
+            <li>Sản Phẩm</li>
+            <li>Tin Tức</li>
+            <li>Trả Góp</li>
+        </ul>
+    </div>
+    <div class="description">
+        <h1>Giá Của Iphone 14 Pro Max Hiện Tại Giảm Mạnh Như Thế Nào ?</h1>
+        <i>Chỉ sau hơn 3 tháng, giá của dòng iPhone 14 series tại các chuỗi bán lẻ ủy quyền của Apple (AAR) ở Việt Nam
+            đã giảm mạnh. Trong đó, phiên bản iPhone 14 Pro Max tiếp tục có giá hạ thêm vài bậc trước dịp lễ Valentine
+            khiến khách Việt vô cùng háo hức.
+
+            Cụ thể, mức giá thấp nhất đang được niêm yết tại các AAR tại Việt Nam đối với 4 phiên bản iPhone 14, iPhone
+            14 Plus, iPhone 14 Pro và iPhone 14 Pro Max lần lượt là 20 triệu đồng, 22,9 triệu đồng, 25,5 triệu đồng và
+            28 triệu đồng.
+
+            So với thị trường Singapore, Thái Lan thì giá 14 Pro, Pro Max tại Việt Nam đã tụt rất sâu, khi trong nhiều
+            năm Thái Lan được coi là thị trường có giá tốt, nhiều đơn vị đã nhập iPhone về bán tại Việt Nam và có lãi
+            nhưng năm nay thì không.
+
+            "Giá iPhone tại Việt Nam đang rẻ nhất Đông Nam Á và có thể nói là rẻ nhất thế giời từ vài trăm đến vài
+            triệu", ông Nguyễn Lạc Huy, đại diện CellphoneS, cho biết.</i>
+        <div class="banner">
+            <img src="https://cdn2.cellphones.com.vn/358x358,webp,q100/media/catalog/product/v/_/v_ng_18.png"
+                class="image1" />
+            <p>CellphoneS đánh giá mức giá này là 1 điều rất bất ngờ, tham chiếu các năm trước đó thì phải đến tháng 6-7
+                thì iPhone mới có mức giá tốt như trên. "Có thể nói sau giai đoạn khan hàng thì thị trường được đánh giá
+                dư cung khá nhiều trong khi cầu có hạn và có chiều hướng giảm", ông Huy nhận định.</p>
+            <p>"Kể từ khi sản phẩm mở bán, đây là lần đầu tiên các mẫu máy và màu sắc đều sẵn hàng. Khách hàng chỉ cần
+                tới cửa hàng đọc tên phiên bản, màu sắc là có ngay mẫu máy mong muốn mà không cần phải chờ đợi hay đặt
+                trước", ông Huy cho biết.
+
+                Bà Phùng Phương, đại diện chuỗi Di Động Việt cũng chia sẻ kể từ cuối đầu tháng 1 đến nay iPhone 14
+                series liên tục được các đại lý giảm giá do nguồn cung ứng dồi dào. Đi kèm đó là các chương trình kích
+                cầu mua sắm trước và sau Tết Nguyên đán.
+            </p>
+            <img
+                src="https://kenh14cdn.com/thumb_w/620/203336854389633024/2023/2/11/photo-1-1676119850152973265419.jpg" />
+            <p>Tại thị trường trong nước nhu cầu mua iPhone 14 sau Tết Nguyên đán giảm mạnh. Ngoài ra, tình hình kinh tế
+                vẫn còn ảm đạm đã khiến Apple quyết định giảm giá dòng điện thoại mới dù ra mắt chưa lâu", bà Phương
+                chia sẻ.</p>
+            <p>Kể từ hôm 5/2, giá iPhone 14 series cũng đã được điều chỉnh giảm trên toàn bộ hệ thống Viettel Store.
+            </p>
+            <p>
+                Giải thích về việc điều chỉnh này, ông Nguyễn Minh Khuê - đại diện truyền thông Viettel Store cho biết:
+                "Do sức mua của thị trường giảm cũng như số lượng hàng hóa về nhiều nên đợt giảm giá lần này cũng là
+                động thái để kích cầu tiêu dùng, bù đắp cho đợt khan hàng trước đó".
+            </p>
+            <p>So sánh về mức độ quan tâm của iPhone 14 so với Galaxy S23 vừa ra mắt, đại diện Viettel Store cho biết,
+                dù mức giá đều nằm ở phân khúc cao cấp nhưng tệp khách hàng dành cho 2 model này lại khác nhau nên cũng
+                không ảnh hưởng quá nhiều, chủ yếu là khó khăn chung của thị trường hiện tại khi sức mua giảm.</p>
+        </div>
+    </div>
 </body>
+
 </html>
